--- a/hosterr-waitlist-page/assets/style.css
+++ b/hosterr-waitlist-page/assets/style.css
@@ -18,9 +18,13 @@
   color: var(--text-medium);
 }
 
-html,
-body {
+html {
   height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  background-color: var(--bg-medium);
 }
 
 ol,
@@ -80,7 +84,8 @@ header {
 
 .btn-accent {
   color: #fff;
-  padding: 0.8rem;
+  padding: 1rem;
+  font-size: 1rem;
   text-align: center;
   border-radius: 4px;
   background-color: var(--accent-blue);
@@ -169,8 +174,51 @@ header > .call-to-action {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex: 1;
+}
+
+/* Hero */
+.hero {
+  /*  */
+}
+
+/* Main Content */
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.content > h1 {
+  color: #000;
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: "Playfair Display", serif;
+}
+
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.subscribe > input {
+  padding: 1rem;
+  font-size: 1rem;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.unsubscribe {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 /* Tablets */
@@ -185,6 +233,7 @@ header > .call-to-action {
   .dropdown-menu > .call-to-action {
     flex: 2;
     flex-direction: row;
+    justify-content: space-evenly;
   }
 }
 
@@ -203,5 +252,13 @@ header > .call-to-action {
 
   .dropdown-menu {
     display: none;
+  }
+
+  main {
+    flex-direction: row-reverse;
+  }
+
+  .subscribe {
+    flex-direction: row;
   }
 }
