--- a/hosterr-waitlist-page/assets/style.css
+++ b/hosterr-waitlist-page/assets/style.css
@@ -22,11 +22,6 @@ html {
   height: 100%;
 }
 
-body {
-  min-height: 100vh;
-  background-color: var(--bg-medium);
-}
-
 ol,
 ul {
   list-style: none;
@@ -38,10 +33,20 @@ a {
 }
 
 /* Page Layout */
+body {
+  height: 100%;
+  min-height: 100vh;
+  background-color: var(--bg-medium);
+}
+
 .page-container {
   width: 94%;
+  height: 100%;
   max-width: 1260px;
   margin: 2vh auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* Header */
@@ -221,6 +226,35 @@ main {
   gap: 1rem;
 }
 
+/* Footer */
+footer {
+  margin: 3rem 0 1rem;
+  display: flex;
+  gap: 3rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.social-links {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.contact {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.contact-text {
+  color: #000;
+}
+
+.contact-text > a {
+  font-weight: bold;
+}
+
 /* Tablets */
 @media screen and (min-width: 425px) {
   .dropdown-menu > .vertical-rule {
@@ -260,5 +294,9 @@ main {
 
   .subscribe {
     flex-direction: row;
+  }
+
+  footer {
+    margin: 3rem;
   }
 }
