--- a/hosterr-waitlist-page/assets/style.css
+++ b/hosterr-waitlist-page/assets/style.css
@@ -11,15 +11,11 @@
 :root {
   --accent-blue: #4977ea;
   --bg-medium: #f9f4e8;
-  --text-medium: #92908b;
+  --text-medium: #5f5f5f;
   --gradient-start: #edbd6b;
   --gradient-end: #eb5f7c;
   font-family: "Lato", sans-serif;
   color: var(--text-medium);
-}
-
-html {
-  height: 100%;
 }
 
 ol,
@@ -34,16 +30,15 @@ a {
 
 /* Page Layout */
 body {
-  height: 100%;
-  min-height: 100vh;
   background-color: var(--bg-medium);
 }
 
 .page-container {
   width: 94%;
-  height: 100%;
+  min-height: 100vh;
   max-width: 1260px;
-  margin: 2vh auto;
+  padding: 1rem 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -257,11 +252,12 @@ main {
 
 /* Footer */
 footer {
-  margin: 3rem 0 1rem;
+  margin-top: 2rem;
   display: flex;
-  gap: 3rem;
+  gap: 2rem;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .social-links {
@@ -319,14 +315,16 @@ footer {
 
   main {
     flex-direction: row-reverse;
+    justify-content: space-between;
   }
 
   .hero {
-    flex: 1;
+    width: 40%;
   }
 
   .content {
-    flex: 1;
+    width: 50%;
+    justify-content: center;
   }
 
   .subscribe {
@@ -334,6 +332,6 @@ footer {
   }
 
   footer {
-    margin: 3rem;
+    margin-bottom: 2rem;
   }
 }
